@@ -4,7 +4,7 @@ plugins {
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'org.springframework.boot' version '2.4.5'
-  id 'org.owasp.dependencycheck' version '6.1.5'
+  id 'org.owasp.dependencycheck' version '6.5.3'
   id 'com.github.ben-manes.versions' version '0.38.0'
   id 'org.sonarqube' version '3.1.1'
   id 'uk.gov.hmcts.java' version '0.12.2'
@@ -77,6 +77,7 @@ task functional(type: Test) {
     generateCucumberReports.enabled = true
 
     javaexec {
+      environment "OAUTH2_CLIENT_SECRET", "DUMMY"
       main = "uk.gov.hmcts.reform.hmc.hmi.befta.OutboundAdapterBeftaMain"
       classpath += sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
       args = [
@@ -126,6 +127,7 @@ task smoke(type: Test) {
   doLast {
     generateCucumberReports.enabled = true
     javaexec {
+      environment "OAUTH2_CLIENT_SECRET", "DUMMY"
       main = "uk.gov.hmcts.reform.hmc.hmi.befta.OutboundAdapterBeftaMain"
       classpath += sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
       args = [
@@ -170,7 +172,7 @@ task customCleanBeftaReports(type:Delete) {
 tasks.clean.dependsOn(tasks.customCleanBeftaReports)
 
 jacocoTestReport {
-  executionData(test)
+  executionData(test, integration)
   reports {
     xml.enabled = true
     csv.enabled = false
@@ -185,7 +187,8 @@ sonarqube {
     property "sonar.projectName", "Reform :: hmc-hmi-outbound-adapter"
     property "sonar.projectKey", "uk.gov.hmcts.reform:hmc-hmi-outbound-adapter"
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
-    property "sonar.coverage.exclusions", "**/hmi/Application.java"
+    property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/hmc/Application.java," +
+    "src/main/java/uk/gov/hmcts/reform/hmc/config/MessageReceiverConfiguration.java,**/MessageSenderConfiguration.java,**/MessageProcessor.java"
   }
 }
 
@@ -194,12 +197,19 @@ def versions = [
   junitPlatform   : '1.7.1',
   lombok          : '1.18.8',
   mapstruct       : '1.4.2.Final',
-  reformLogging   : '5.1.7',
+  reformLogging   : '5.1.9',
   springBoot      : springBoot.class.package.implementationVersion,
   springCloud     : '2020.0.1',
   springfoxSwagger: '3.0.0',
-  testcontainers  : '1.15.2'
+  testcontainers  : '1.15.2',
+  jetty           : '9.4.43.v20210629',
+  netty           : '4.1.77.Final'
 ]
+
+ext['spring-framework.version'] = '5.3.18'
+ext['spring-security.version'] = '5.4.7'
+ext['log4j2.version'] = '2.17.1'
+ext['jackson.version'] = '2.13.2'
 
 // before committing a change, make sure task still works
 dependencyUpdates {
@@ -229,10 +239,16 @@ dependencyManagement {
       entry 'json-path'
       entry 'xml-path'
     }
-    dependencySet(group: 'org.apache.tomcat.embed', version: '9.0.43') {
+    dependencySet(group: 'org.apache.tomcat.embed', version: '9.0.58') {
       entry 'tomcat-embed-core'
       entry 'tomcat-embed-el'
       entry 'tomcat-embed-websocket'
+    }
+    //CVE-2021-22044
+    dependencySet(group: 'org.springframework.cloud', version: '3.0.5') {
+      entry 'spring-cloud-openfeign-core'
+      entry 'spring-cloud-starter-openfeign'
+      entry 'spring-cloud-starter-contract-stub-runner'
     }
   }
 }
@@ -245,11 +261,10 @@ cucumberReports {
 
 repositories {
   mavenLocal()
+  mavenCentral()
   maven {
     url "https://jitpack.io"
   }
-  mavenCentral()
-  jcenter()
 }
 
 ext.libraries = [
@@ -263,6 +278,9 @@ ext.libraries = [
 ]
 
 dependencies {
+  compile "com.fasterxml.jackson.core:jackson-databind:2.13.2.2"
+  compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.13.2'
+  compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-jaxb-annotations', version: '2.13.2'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
@@ -270,14 +288,68 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
-
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign'
+  implementation group: 'io.github.openfeign', name: 'feign-okhttp', version: '11.2'
   implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
 
-  implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
-  implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
+  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
+  implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: versions.reformLogging
+
+  implementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.27.2'
+  implementation group: 'javax.inject', name: 'javax.inject', version: '1'
+  implementation group: 'com.azure', name: 'azure-messaging-servicebus', version: '7.8.0'
+  implementation group: 'com.azure', name: 'azure-core', version: '1.28.0'
+
+  implementation group: 'net.minidev', name: 'json-smart', version: '2.4.7'
+
+  // Explicitly specify version of jakarta.el to be used to resolve CVE-2021-28170
+  implementation group: 'org.glassfish', name: 'jakarta.el', version: '4.0.1'
+  // CVE-2021-42550
+  implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.10'
+  implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.10'
+
+  implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
 
   implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+
+  implementation group: 'org.eclipse.jetty', name: 'jetty-server', version: versions.jetty
+  implementation group: 'org.eclipse.jetty', name: 'jetty-alpn-client', version: versions.jetty
+  implementation group: 'org.eclipse.jetty', name: 'jetty-continuation', version: versions.jetty
+  implementation group: 'org.eclipse.jetty', name: 'jetty-util', version: versions.jetty
+  implementation group: 'org.eclipse.jetty', name: 'jetty-util-ajax', version: versions.jetty
+  implementation group: 'org.eclipse.jetty', name: 'jetty-xml', version: versions.jetty
+  implementation group: 'org.eclipse.jetty', name: 'jetty-client', version: versions.jetty
+  implementation group: 'org.eclipse.jetty', name: 'jetty-security', version: versions.jetty
+  implementation group: 'org.eclipse.jetty', name: 'jetty-http', version: versions.jetty
+  implementation group: 'org.eclipse.jetty', name: 'jetty-io', version: versions.jetty
+  implementation group: 'org.eclipse.jetty.http2', name: 'http2-server', version: versions.jetty
+  implementation group: 'org.eclipse.jetty.http2', name: 'http2-common', version: versions.jetty
+  implementation group: 'org.eclipse.jetty', name: 'jetty-servlet', version: versions.jetty
+  implementation group: 'org.eclipse.jetty', name: 'jetty-servlets', version: versions.jetty
+  implementation group: 'org.eclipse.jetty', name: 'jetty-webapp', version: versions.jetty
+  implementation group: 'org.eclipse.jetty', name: 'jetty-proxy', version: versions.jetty
+  implementation group: 'org.eclipse.jetty', name: 'jetty-alpn-server', version: versions.jetty
+  implementation group: 'org.eclipse.jetty', name: 'jetty-alpn-conscrypt-server', version: versions.jetty
+  implementation group: 'org.eclipse.jetty', name: 'jetty-alpn-conscrypt-client', version: versions.jetty
+
+  // Explicitly set versions of io.netty components to resolve CVE-2021-37136 and CVE-2021-37137
+  implementation group: 'io.netty', name: 'netty-buffer', version: versions.netty
+  implementation group: 'io.netty', name: 'netty-codec', version: versions.netty
+  implementation group: 'io.netty', name: 'netty-codec-dns', version: versions.netty
+  implementation group: 'io.netty', name: 'netty-codec-http', version: versions.netty
+  implementation group: 'io.netty', name: 'netty-codec-http2', version: versions.netty
+  implementation group: 'io.netty', name: 'netty-codec-socks', version: versions.netty
+  implementation group: 'io.netty', name: 'netty-common', version: versions.netty
+  implementation group: 'io.netty', name: 'netty-handler', version: versions.netty
+  implementation group: 'io.netty', name: 'netty-handler-proxy', version: versions.netty
+  implementation group: 'io.netty', name: 'netty-resolver', version: versions.netty
+  implementation group: 'io.netty', name: 'netty-resolver-dns', version: versions.netty
+  implementation group: 'io.netty', name: 'netty-resolver-dns-native-macos', version: versions.netty
+  implementation group: 'io.netty', name: 'netty-transport', version: versions.netty
+  implementation group: 'io.netty', name: 'netty-transport-native-epoll', version: versions.netty
+  implementation group: 'io.netty', name: 'netty-transport-native-kqueue', version: versions.netty
+  implementation group: 'io.netty', name: 'netty-transport-native-unix-common', version: versions.netty
 
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
@@ -285,12 +357,19 @@ dependencies {
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
 
+  testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.11.1'
+  testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
+  testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
+
+  testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-contract-stub-runner'
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
 
   functionalTestImplementation sourceSets.main.runtimeClasspath
-  functionalTestImplementation group: 'com.github.hmcts', name: 'befta-fw', version: '6.14.2'
+  functionalTestImplementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.1'
   functionalTestImplementation libraries.junit5
+
+  testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 }
 
 mainClassName = 'uk.gov.hmcts.reform.hmc.Application'
@@ -307,4 +386,12 @@ bootJar {
 
 wrapper {
     distributionType = Wrapper.DistributionType.ALL
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+  // The line below prevents the build from failing if the Fortify scan detects issues
+  ignoreExitValue = true
 }
